<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/server_information_title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/server_information_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ipaddress_label"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/server_ip_address_label"
            app:layout_constraintTop_toBottomOf="@id/server_information_title" />

        <TextView
            android:id="@+id/ipaddress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/ipaddress_label"
            tools:text="127.0.0.1" />

        <TextView
            android:id="@+id/port_label"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/server_port_label"
            app:layout_constraintTop_toBottomOf="@id/ipaddress_text" />

        <TextView
            android:id="@+id/port_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/port_label"
            tools:text="8080" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_server_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/start_server_label"
            app:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@id/port_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_call_logs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/view_call_logs_label"
            app:backgroundTint="@color/black"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/start_server_button" />
    </LinearLayout>
</ScrollView>
